--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
     "next-auth": "5.0.0-beta.3",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "zod": "^3.22.4"
