--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.7.0",
     "framer-motion": "^10.16.16",
+    "icons": "^1.0.0",
     "next": "14.0.4",
     "next-auth": "5.0.0-beta.3",
     "next-themes": "^0.2.1",
-    "react": "^18",
+    "react": "^18.2.0",
     "react-dom": "^18",
+    "react-icons": "^4.12.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
